--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     </h1>
     <div id="form-container">
         <div id="input-area">
-            <label for="one">History of the Emergence of Independent Bangladesh</label>
+            <label for="one">211501-History of the Emergence of Independent Bangladesh</label>
             <input type="text" id="one">
-            <label for="two">Physics-1</label>
+            <label for="two">212707-Physics-1</label>
             <input type="text" id="two">
-            <label for="three">Physics-2</label>
+            <label for="three">212709Physics-2</label>
             <input type="text" id="three">
-            <label for="four">Introduction to Statistics or Chemistry-1</label>
+            <label for="four">213607-Introduction to Statistics or Chemistry-1</label>
             <input type="text" id="four">
-            <label for="five">chemistry-1 Practical or Statistic-1 practicle</label>
+            <label for="five">213608-Statistic-1 practicle or chemistry-1 Practical</label>
             <input type="text" id="five">
-            <label for="six">Fundamental of Mathematics</label>
+            <label for="six">213701-Fundamental of Mathematics</label>
             <input type="text" id="six">
-            <label for="seven">Calculus-1</label>
+            <label for="seven">213703-Calculus-1</label>
             <input type="text" id="seven">
-            <label for="eight">Linear Algebra</label>
+            <label for="eight">213705-Linear Algebra</label>
             <input type="text" id="eight">
-            <label for="nine">Analytic And Vector Geometric</label>
+            <label for="nine">213707-Analytic And Vector Geometric</label>
             <input type="text" id="nine">
 
         </div>
