--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <input type="text" id="two">
             <label for="three">212709Physics-2</label>
             <input type="text" id="three">
-            <label for="four">213607-Introduction to Statistics or Chemistry-1</label>
+            <label for="four">213607-Introduction to Statistics or 212807-Chemistry-1</label>
             <input type="text" id="four">
-            <label for="five">213608-Statistic-1 practicle or chemistry-1 Practical</label>
+            <label for="five">213608-Statistic-1 practicle or 212808-Chemistry-1 Practical</label>
             <input type="text" id="five">
             <label for="six">213701-Fundamental of Mathematics</label>
             <input type="text" id="six">
