--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="one">
             <label for="two">212707-Physics-1</label>
             <input type="text" id="two">
-            <label for="three">212709Physics-2</label>
+            <label for="three">212709-Physics-2</label>
             <input type="text" id="three">
             <label for="four">213607-Introduction to Statistics or 212807-Chemistry-1</label>
             <input type="text" id="four">
