--- a/index.html
+++ b/index.html
@@ -19,28 +19,135 @@
     </h1>
     <div id="form-container">
         <div id="input-area">
-            <label for="one">211501-History of the Emergence of Independent Bangladesh</label>
-            <input type="text" id="one">
-            <label for="two">212707-Physics-1</label>
-            <input type="text" id="two">
-            <label for="three">212709-Physics-2</label>
-            <input type="text" id="three">
-            <label for="four">213607-Introduction to Statistics or 212807-Chemistry-1</label>
-            <input type="text" id="four">
-            <label for="five">213608-Statistic-1 practicle or 212808-Chemistry-1 Practical</label>
-            <input type="text" id="five">
-            <label for="six">213701-Fundamental of Mathematics</label>
-            <input type="text" id="six">
-            <label for="seven">213703-Calculus-1</label>
-            <input type="text" id="seven">
-            <label for="eight">213705-Linear Algebra</label>
-            <input type="text" id="eight">
-            <label for="nine">213707-Analytic And Vector Geometric</label>
-            <input type="text" id="nine">
+            <select name="" id="one">
+                <option value="" selected disabled>211501-History of the Emergence of Independent Bangladesh</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="two">
+                <option value="" selected disabled>212707-Physics-1</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="three">
+                <option value="" selected disabled>212709-Physics-2</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="four">
+                <option value="" selected disabled>213607-Introduction to Statistics or 212807-Chemistry-1</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="five">
+                <option value="" selected disabled>213608-Statistic-1 practicle or 212808-Chemistry-1 Practical</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="six">
+                <option value="" selected disabled>213701-Fundamental of Mathematics</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="seven">
+                <option value="" selected disabled>213703-Calculus-1</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="eight">
+                <option value="" selected disabled>213705-Linear Algebra</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+            <select name="" id="nine">
+                <option value="" selected disabled>213707-Analytic And Vector Geometric</option>
+                <option value="4.00">A+(4.00)</option>
+                <option value="3.75">A(3.75)</option>
+                <option value="3.50">A-(3.50)</option>
+                <option value="3.25">B+(3.25)</option>
+                <option value="3.00">B(3.00)</option>
+                <option value="2.75">B-(2.75)</option>
+                <option value="2.50">C+(2.50)</option>
+                <option value="2.25">C(2.25)</option>
+                <option value="2.00">D(2.00)</option>
+                <option value="0.00">F(0.00)</option>
+            </select>
+        </div>
+        <button type="button" onclick="result()">Get Total Point</button>
+    </div>
+
+
+    <div id="display">
+        <div id="result">
 
         </div>
-        <button type="button" onclick="getInputValue();">Get Total Point</button>
-
+        <button id="try" onclick="fresh()">
+            Try Again
+        </button>
     </div>
     
     <script src="script.js"></script>
